# katengine-gold

./: .gitignore  CMakeLists.txt  README.md  run.bat
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/kat/: application.hpp  assets.hpp  context.hpp  core.hpp  net.hpp  renderer.hpp  window.hpp
engine/include/kat/gl/: glcontext.hpp
engine/include/kat/vk/: vkcontext.hpp  vkrenderer.hpp
engine/src/kat/: application.cpp  assets.cpp  context.cpp  core.cpp  net.cpp  renderer.cpp  window.cpp
engine/src/kat/gl/: glcontext.cpp
engine/src/kat/vk/: vkcontext.cpp  vkrenderer.cpp
run/assets/: appcfg.json
sandbox/: CMakeLists.txt
sandbox/include/sandbox/: main.hpp
sandbox/src/sandbox/: main.cpp
schema/json/: appcfg.json
stb/: CMakeLists.txt
stb/src/: stb_c_lexer.cpp  stb_easy_font.cpp  stb_leakcheck.cpp
